<resources>
    <string name="app_name">Scientific JugaadFunda</string>
    <string name="welcome">Welcome</string>
    <string name="jugaadfunda_instruction">SignIn with your www.jugaadfunda.com Credentials</string>
    <string name="guest_instruction">SignIn with your Guest User Credentials</string>
    <string name="loginas">SignIn As</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="continue_">Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="guest_user">Switch to Guest User</string>
    <string name="jugaadfunda_user">Switch to Jugaadfunda User</string>
    <string name="email">Email Id</string>
    <string name="set_password">Set Password</string>
    <string name="add_track">Add Track</string>
    <string name="track_name">Track Name</string>
    <string name="track_description">Track Description</string>
    <string name="record">Record</string>
    <string name="download">Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_new_to_jugaad_funda"><b>Create Account</b>, New to Jugaad Funda?</string>
    <string name="login_already_a_customer"><b>Login</b>, Already a customer?</string>
    <string name="upload">Upload</string>
    <string name="save_to_disk">Save to Disk</string>
    <string name="radio">Radio</string>
    <string name="scheduled_sessions">Scheduled Sessions</string>
    <string name="cartoon_corner">Fun Corner</string>
    <string name="virtual_exb">Virtual Exhibition</string>
    <string name="quiz">Quiz / Poll</string>
    <string name="business_model">Business Model Canvas</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="begin_my_startup">Begin My Startup</string>
    <string name="join_as_mentor">Join as Mentor</string>
    <string name="join_as_investor">Join as Investor</string>
    <string name="manage_my_sig">Manage my SIG</string>
    <string name="institute">Institute</string>
    <string name="incubation">Incubation</string>
    <string name="update_my_skill">Update My Skill</string>
    <string name="upgrade_my_business">Upgrade My Business</string>
    <string name="uplift_my_town_grom">Uplift My Town/Grom</string>
    <string name="endustry_enquiry">Industry Connect</string>
    <string name="capture_idea">Capture Idea</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="submit_test">Submit Test</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_company_name">* Enter Company Name, Only uppercase, lowercase, numbers,-,_,.,\' and Max 500 charatcers are allowed</string>
    <string name="enter_email_id">* Enter Email ID</string>
    <string name="enter_aadhaar_no">Enter Aadhaar No</string>
    <string name="enter_10_keyword">* Enter 10 keyword that best describe your business, Max 500 characters are allowed</string>
    <string name="enter_brief_description">* Enter Brief Description of nature of business</string>
    <string name="enter_annual_turnover">Enter Annual Turnover</string>
    <string name="enter_no_of_employees">* Enter No. of Employees, Only numbers and Max 7 digit are allowed</string>
    <string name="enter_no_of_departments">* Enter No. of Departments, Only numbers and Max 3 digit are allowed</string>
    <string name="enter_establishment_year">* Enter Establishment Year</string>
    <string name="enter_company">*Enter Company Contact No. For ex - XXXXXXXXXX</string>
    <string name="enter_company_email_id">*Enter Company Email ID</string>
    <string name="enter_industry_pan_no">Enter Industry Pan No</string>
    <string name="enter_pincode">* Enter Pincode, Only numbers and Max 6 digit are allowed</string>
    <string name="enter_city">* Enter City, Max 100 characters are allowed</string>
    <string name="enter_owner_name">* Enter Owner Name, Only uppercase, lowercase,.,\' and Max 150 charatcers are allowed</string>
    <string name="enter_company_address">* Enter Company Address, Max 500 characters are allowed</string>
    <string name="secondry_person_contact_no_if_any">Secondry Person Contact No. (if any) For ex - XXXXXXXXXX</string>
    <string name="challenges_faced_by_industry">Challenges faced by industry</string>
    <string name="efficient_infrastructure">Efficient Infrastructure, Only uppercase, lowercase,numbers.,\' and Max 1000 charatcers are allowed</string>
    <string name="sales_promotion_">Sales/Promotion Branding/Business Development, Only uppercase, lowercase,numbers.,\' and Max 1000 charatcers are allowed</string>
    <string name="operations_and_compliance_management">Operations and Compliance Management, Only uppercase, lowercase,numbers.,\' and Max 1000 charatcers are allowed</string>
    <string name="technology_rnd_innovations">Technology/Rnd/Innovations, Only uppercase, lowercase,numbers.,\' and Max 1000 charatcers are allowed</string>
    <string name="contact_management_and_documentation">Contact Management and Documentation, Only uppercase, lowercase,numbers.,\' and Max 1000 charatcers are allowed</string>
    <string name="it_web_presence_and_apps">IT (Web Presence and Apps), Only uppercase, lowercase,numbers.,\' and Max 1000 charatcers are allowed</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="submitreport_claimremuneration">Submit Report &amp; Claim Remuneration</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="summary_of_meeting">Summary of Meeting</string>
    <string name="technology_business_interns_details">Technology Business Interns Details</string>
    <string name="enter_year">* Enter Year</string>
    <string name="enter_dept_name">* Enter Dept Name, Only uppercase, lowercase, numbers,-,.,_,\' and Max 500 characters are allowed</string>
    <string name="enter_college_name">* Enter College Name, Only uppercase, lowercase, numbers,-,.,_,\' and Max 500 characters are allowed</string>
    <string name="enter_name">* Enter Name, Only uppercase, lowercase,-,.,_,\' and Max 150 characters are allowed</string>
    <string name="enter_location">* Enter Location, Only uppercase, lowercase, numbers,-,.,_,\' and Max 200 characters are allowed</string>
    <string name="enter_start_time">* Enter Start Time</string>
    <string name="enter_end_time">* Enter End Time</string>
    <string name="name_of_attendees">* Name of Attendees, Only uppercase, lowercase, numbers,-,.,_,\' and Max 500 characters are allowed</string>
    <string name="enter_points_discussed">* Enter Points Discussed, Max 1000 charaters are allowed</string>
    <string name="enter_date">* Enter Date</string>
    <string name="enter_title_of_meeting">* Enter Title of Meeting, Only uppercase, lowercase, numbers,-,.,_,\' and Max 200 characters are allowed</string>
    <string name="final_idea_of_the_week">Final Idea Of The Week</string>
    <string name="idea_of_the_day">Idea Of The Day</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="title_of_your_idea_max_200_characters">* Title of your idea (Max 200 characters)</string>
    <string name="what_triggered">* What triggered this idea in your mind? (Max 500 characters)</string>
    <string name="is_it_solving_a_problem">* Is it solving a problem? If yes, what problem it is.</string>
    <string name="how_future_proof">* How future proof it is? Are any other ways to improve.</string>
    <string name="how_it_is_better_than">* How it is better than what is existing. (Max 500 characters)</string>
    <string name="attach_picture_of_idea">Attach picture of idea.</string>
    <string name="what_triggered_this_idea">* What triggered this idea in your mind? (Max 500 characters)</string>
    <string name="how_future_proof_">* How future proof it is? If yes, What problem it is.</string>
    <string name="popup_captureidea_text">Schedule Track</string>
    <string name="btn_captureideafinal">Schedule Track</string>
    <string name="btn_savelocally">Schedule Track</string>
    <string name="whatproblem"><font fgcolor='#DD1C0E' size="12">*</font> What is the Problem?</string>
    <string name="whyproblem"><font fgcolor='#ffff8800' size="12">*</font>Why is it a Problem?</string>
    <string name="whereproblem"><font fgcolor='#ffff8800' size="12">*</font>Where is this problem observed?</string>
    <string name="whoimpacted"><font fgcolor='#ffff8800' size="12">*</font>Who is impacted by this problem?</string>
    <string name="aware"><font fgcolor='#ffff8800' size="12">*</font>When did you first become aware of this problem?</string>
    <string name="howobserve"><font fgcolor='#ffff8800' size="12">*</font>How do you observe this problem?What are the symptoms associated with the problem?</string>
    <string name="keywords"><font fgcolor='#ffff8800' size="12">*</font><font fgcolor='#ffff8800' size="12">(First Three)</font> Enter 10 Keywords Describing the Problem </string>
    <string name="observeperiod"><font fgcolor='#ffff8800' size="12">*</font>How often do you observe the problem? (Daily, Weekly, Monthly...is it becoming more frequent) </string>
    <string name="businessdomain"><font fgcolor='#ffff8800' size="12">*</font>Select Business Domain </string>
    <string name="product_service_sdomain"><font fgcolor='#ffff8800' size="12">*</font>Select Product/Service Domain </string>
    <string name="skillrequirement"><font fgcolor='#ffff8800' size="12">*</font>Skill Requirement </string>
    <string name="graduation_relevance"><font fgcolor='#ffff8800' size="12">*</font>Graduation Relevance </string>
    <string name="priority_relevance"><font fgcolor='#ffff8800' size="12">*</font>Priority Relevance </string>
    <string name="problem_analysis">Problem Analysis</string>
    <string name="ideal"><font fgcolor='#ffff8800' size="12">*</font>Ideal </string>
    <string name="reality"><font fgcolor='#ffff8800' size="12">*</font>Reality </string>
    <string name="consequences"><font fgcolor='#ffff8800' size="12">*</font>Consequences </string>
    <string name="measurable_outcomes"><font fgcolor='#ffff8800' size="12">*</font>Measurable Outcomes </string>
    <string name="available_resources"><font fgcolor='#ffff8800' size="12">*</font>Available Resources</string>
    <string name="expected_skills"><font fgcolor='#ffff8800' size="12">*</font>Expected Skills </string>
    <string name="numberofapplicant"><font fgcolor='#ffff8800' size="12">*</font>Enter the number of applicants for solving this problem </string>
    <string name="problemcatergory"><font fgcolor='#ffff8800' size="12">*</font>Problem statement categorized as </string>
    <string name="consultancy">Consultancy Opportunity</string>
    <string name="internship">Internship Opportunity</string>
    <string name="ps">Problem Statement</string>
    <string name="otherbusiness">Enter Other Business Interdisciplinary Domain</string>
    <string name="otherproduct">Enter Other Product/Service Interdisciplinary Domain</string>
    <string name="mandatory_fields">Fields marked with <font fgcolor='#ffff8800' size="12">*</font> are mandatory </string>
    <string name="enter_code">Please enter the code</string>
    <string name="enter_quizcode_instructions">The Psychometric Test Code will be given on the day of the Psychometric Test. Kindly contact your college to know the date and time of the Psychometric Test.</string>
    <string name="enter_code_hint">i.e. PQSIn1234567</string>
</resources>