<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp2">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp20">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:gravity="center"
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp20"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:id="@+id/et_quizcode"
        android:hint="@string/enter_code_hint"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/sp_grayborder"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:id="@+id/btn_codesubmit"
           android:layout_gravity="center"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/sp_grayborder"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_quizcode_instructions"
            android:gravity="center"
            android:textSize="@dimen/sp16"

            android:layout_marginTop="@dimen/dp20"/>
</LinearLayout>
</androidx.cardview.widget.CardView>