<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_popuptext"
        android:text="@string/popup_captureidea_text"
        android:layout_marginTop="@dimen/dp10"
        android:layout_gravity="center"
        android:textSize="14sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_final"
        android:text="@string/btn_captureideafinal"
        android:background="@drawable/sp_button"
        android:layout_marginTop="@dimen/dp10"
        android:padding="@dimen/dp3"
        android:layout_gravity="center"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_savelocally"
        android:text="@string/btn_savelocally"
        android:background="@drawable/sp_button"
        android:layout_marginTop="@dimen/dp10"
        android:padding="@dimen/dp3"
        android:layout_gravity="center"/>
</LinearLayout>
